# contero

./: .gitignore  BUILDME.rst  README.md  README.rst  buildozer.spec  co_lang.py  co_utils.py  docker-compose.yml  graphlayout.kv  graphlayout.py  leak.kv  leak.py  leak_md.py  main.kv  main.py  main_a.kv  main_b.kv  pyproject.toml  setup.cfg
contero/: co_lang.py  co_utils.py  main.kv  main.py
junk/: graphlayout.kv  ikolim.kv  ikolim.py  leak.kv  leak.py  leak_md.kv  leak_md.py  tsh_1.py
tests/: test_contero.py
