[tool.poetry]
name = "contero"
version = "0.1.0"
description = "Power supply manager"
authors = ["Tyrn <orlov@bos-ltd.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
Kivy = "2.2.1"
# kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
kivymd = "1.1.1"
"kivy-garden.graph" = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
pre-commit = "^3.6.0"
memory-profiler = "^0.60.0"
matplotlib = "^3.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bin
    | \.buildozer
    | \.gradle
  )/
)
'''
