[tool.poetry]
name = "contero"
version = "0.1.0"
description = "Power supply manager"
authors = ["Tyrn <orlov@bos-ltd.ru>"]

[tool.poetry.dependencies]
python = "^3.13"
Kivy = "2.3.1"
# kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
kivymd = "1.1.1"
"kivy-garden.graph" = "^0.4.0"

[poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
pre-commit = "^4.3.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.10.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bin
    | \.buildozer
    | \.gradle
  )/
)
'''
