[project]
name = "contero"
version = "0.1.0"
description = "Power supply manager"
authors = [{ name = "Tyrn", email = "orlov@bos-ltd.ru" }]
readme = "README.rst"
requires-python = "==3.11.13,<4.0.0"
dependencies = [
  "kivy (>=2.3.1,<3.0.0)",
  "kivymd ==1.1.1",
  "kivy-garden-graph (>=0.4.0,<0.5.0)",
  # "kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip",
]

[tool.poetry]
packages = [{ include = "contero" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "matplotlib (>=3.10.6,<4.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "black (>=25.1.0,<26.0.0)",
  "pre-commit (>=4.3.0,<5.0.0)",
  "memory-profiler (>=0.61.0,<0.62.0)",
  "buildozer (>=1.5.0,<2.0.0)",
  "cython (>=3.1.3,<4.0.0)",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | bin
    | \.buildozer
    | \.gradle
  )/
)
'''
